--- a/stash_engine/ui-library/scss/_ui-library.scss
+++ b/stash_engine/ui-library/scss/_ui-library.scss
@@ -36,3 +36,11 @@
 p {
   line-height: 150%;
 }
+
+
+ol li,
+ul li {
+   margin-bottom: 1em;
+   line-height: 125%;
+}
+
